[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[project]
name = "bbstrader"
dynamic = ["version"]
description = "Simplified Investment & Trading Toolkit with Python & C++"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "colorama>=0.4.6",
    "dash>=3.2.0",
    "eodhd>=1.0.32",
    "exchange_calendars>=4.11.1",
    "financetoolkit>=2.0.4",
    "ipython>=9.5.0",
    "nltk>=3.9.1",
    "notify_py>=0.3.43",
    "numpy>=2.2.6",
    "praw>=7.8.1",
    "pybind11>=3.0.1",
    "pyfiglet>=1.0.4",
    "pyportfolioopt>=1.5.6",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "PyYAML>=6.0.2",
    "QuantStats>=0.0.77",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "sumy>=0.11.0",
    "tabulate>=0.9.0",
    "textblob>=0.19.0",
    "tweepy>=4.16.0",
    "vaderSentiment>=3.3.2",
    "yfinance>=0.2.65",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
authors = [
    { name = "Bertin Balouki SIMYELI", email = "bertin@bbs-trading.com" },
]
maintainers = [
    { name = "Bertin Balouki SIMYELI", email = "bertin@bbs-trading.com" },
]
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "Finance", "Toolkit", "Financial", "Analysis", "Fundamental", "Quantitative",
    "Database", "Equities", "Currencies", "Economics", "ETFs", "Funds",
    "Indices", "Moneymarkets", "Commodities", "Futures", "CFDs", "Derivatives",
    "Trading", "Investing", "Portfolio", "Optimization", "Performance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
"Homepage" = "https://github.com/bbalouki/bbstrader"
"Download" = "https://pypi.org/project/bbstrader/"
"Documentation" = "https://bbstrader.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/bbalouki/bbstrader"

[project.scripts]
bbstrader = "bbstrader.__main__:main"

[project.optional-dependencies]
MT5 = ["MetaTrader5"]

# Scikit-Build-Core Configuration
[tool.scikit-build]
cmake.version = ">=3.20"
cmake.define = { "BUILD_PYTHON_BINDINGS" = "ON", "CMAKE_VS_GLOBALS" = "IgnoreWarnIntDirInTempDetected=true" }
wheel.packages = ["src/bbstrader"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.txt"
regex = '(?P<value>\d+\.\d+\.\d+)'

[tool.scikit-build.sdist]
include = ["src/bbstrader/assets/*"]
